--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,5 +1,5 @@
 /* Select the image with a class of kitty-1 */
-
+img .kitty-1
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 1;
@@ -8,7 +8,7 @@
 }
 
 /* Select the image with id of kitty-2 */
-
+img #kitty-2
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 2;
@@ -18,7 +18,8 @@
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/
+  #basket img { 
   position: absolute;
   z-index: 5;
   top: 291px;
@@ -27,7 +28,8 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/ 
+#ball + img {
   position: absolute;
   z-index: 4;
   top: 260px;
@@ -36,7 +38,8 @@
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/ 
+img[alt="Kitty 5"] {
   position: absolute;
   z-index: 3;
   top: 217px;
